--- a/pages/login.html
+++ b/pages/login.html
@@ -7,6 +7,33 @@
     <title>Document</title>
 </head>
 <body>
+    <ul>
+        <li><a class="active" href="../index.html">Home</a></li>
+        <li><a href="./register.html">Register</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li style="float: right"><a href="./about.html">About</a></li>
+        <li style="float: right">
+          <a href="./login.html">
+            <img
+              src="../images/icons8-login-50.png"
+              alt="Login Icon"
+              class="login-user"
+              width="15px"
+            />Log In
+          </a>
+        </li>
+      </ul>
+
     <h1>Login</h1>
+
+    <form action="#">
+        <label for="UserName">User Name</label>
+        <input type="text" name="userName" id="UserName" required><br>
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password"><br><br>
+        <input type="submit">
+    </form>
+
+   
 </body>
 </html>
